# bayes_classifier

./: README.md  pyproject.toml
src/bayes_classifier/: __init__.py  bernoulli.py  categorical.py  classifier.py  gaussian_naive.py  multinomial.py  multivariate_gaussian.py  poisson.py
tests/: test_classifier.py
