[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayes-classifier"
version = "0.1.0"
description = "A lightweight collection of Bayes classifiers: multivariate Gaussian, Gaussian naive Bayes, multinomial, Bernoulli, categorical, and Poisson."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Affan Pathan" }
]
keywords = ["bayes", "classification", "machine-learning", "gaussian"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "build>=1.2",
  "twine>=5.0"
]
lint = ["ruff"]

[project.urls]
Homepage = "https://github.com/ItzCobaltboy/bayes_classifier"
Issues = "https://github.com/ItzCobaltboy/bayes_classifier/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bayes_classifier*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

